Elastic search (#6)
* add es instance

* rename repository file

* search books

* fix package name

* update swagger

* go mod tidy

* es book repo

* search books test
